Basic Scrollbar in Chrome not disappearing corrected

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
   font-family: 'Nunito', sans-serif;
   color: white;
   height:  auto;
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none; /* mozilla */
 /*  background-color: #F1E6B2; /* Find another color PANTONE 12-0804 TCX */
 }
 
@@ -16,13 +18,10 @@ html{
   min-width: 600px; /* Beware for Responsive !! */
   font-size: 62.5%;
   overflow: scroll;
-
-  -ms-overflow-style: none;  /* Internet Explorer 10+ */
-  scrollbar-width: none; /* mozilla */
 }
 
 /* No Scrollbars but custom */
-::-webkit-scrollbar { 
+*::-webkit-scrollbar { 
   display: none;  /* Safari and Chrome */
 }
 
